09.02.2010:
	- introduced datatypes.h to encapsulate used data types

05.02.2010:
	- ensure the TODO list is delivered with binary distributions for Wiz

30.01.2010:
	- move all screen handling into Graphics module for abstraction

29.01.2010:
	- v0.3 release version
	- small documentation fixes

27.01.2010:
	- added 24x24 pixel icon for GP2X Wiz
	- added GP2X Wiz specific README
	- added TODO list
	- updated the INSTALL file
	
26.01.2010:
	- added infrastructure for future Wiz release as ZIP file which can be directly unzipped to NAND or SD-Card

25.01.2010:
  - added support for window icon
  - moved loading of graphics resources into a subfunction Graphics_LoadGraphicsResource()
  - FIXED: missing SDL_FreeSurface calls in Graphics_CleanUp()
  - slight update of INSTALL and README documentation
  - updated copyright year in all source files 

24.01.2010:
	- added support for GP2X (clean up of Graphics module, disable mouse pointer if configured)

21.01.2010:
	- added a user interface module to handle menus, highscore inputs and display of various screens
	- fixed limit of maximum rotations (data type was to small to hold the intended amount, producing an overflow)

19.01.2010:
	- added dynamic sizes of graphics data
	- screen mode configurable by #define SCREENRES
	- added sysconfig.h to allow for port specific settings at compile time

15.11.2009:
	- added event handling module (event.c)

13.11.2009:
	- added data/icons/ directory with window icons
	- created tag release-0.2

12.11.2009:
	- basic scoring implemented
	- added GAMEOVER possibility (turn limit hit)
	- added VERSION information header
	- added instructions screen

11.11.2009:
	- refactored function and procedures names according to <<Module>>_Function convention
	- refactored main() into distinct parts and subroutines
	- LINT
	
10.11.2009:
	- project resurrected for future port to GP2X Wiz
	- cleanup source formatting
	- cleanup datatypes in use (where applicable)
	- typedefed BOOLEAN properly